# ranked_programming

./: .gitignore  BASE_CASE.md  CHANGELOG.md  LICENSE  LLM_IMPLEMENTATION_GUIDE.md  LLM_WORKFLOW.md  README.md  RELEASE_NOTES_v2.1.0.md  environment.yml  pyproject.toml  racket_debug.txt  requirements-dev.txt  result.txt  rp-api.rkt  rp-core.rkt  rp-test.rkt  run_examples.sh
docs/: ARCHITECTURE_ENHANCEMENT_DESIGN.md  causal_reasoning_tutorial.md  index.md  python_reference.md  spohn_theory_guide.md  theoretical_foundations.md  theory_mapping.md
examples/: README.md  bayesian_ranking_comprehensive_bridge.py  belief_propagation_example.py  boolean_circuit.py  boolean_circuit_mdl.py  boolean_circuit_mdl_e_x.py  boolean_circuit_mdl_result.py  boolean_circuit_penalty_demo.py  causal_boolean_circuit.py  causal_boolean_circuit_srm.py  causal_ranking_network.py  causal_reasoning_demo.py  causal_srm_identification_demo.py  compare_hmm_outputs.py  demo_c_representation.py  demo_smt_constraints.py  example.py  google_10000_english_no_swears.py  hidden_markov.py  hidden_markov.rkt  hidden_markov_mdl.py  localisation.py  localisation_mdl.py  mdl_penalty_estimation.py  ranked_let.py  ranked_let_mdl.py  ranked_let_penalty_demo.py  ranked_procedure_call.py  ranked_procedure_call_mdl.py  ranked_procedure_call_penalty_demo.py  ranking_network.py  ranking_network_mdl.py  recursion.py  recursion_mdl.py  spelling_correction.py  spelling_correction_mdl.py  spelling_correction_penalty_demo.py  spohn_theory_demo.py
nim_project/: README.md  makefile  nim_bug_report.txt  nim_project.nimble
rust_project/rust_grpc_service/: Cargo.toml  Makefile  PORTING_CONTEXT.md  README.md  build.rs
rust_project/rust_grpc_service/.github/: copilot-instructions.md
rust_project/rust_grpc_service/proto/: ranking.proto
rust_project/rust_grpc_service/python_client/: client.py  generate_proto.sh  ranking_pb2.py  ranking_pb2_grpc.py
rust_project/rust_grpc_service/src/: main.rs  ranking.rs
tests/: test_bang.py  test_belief_propagation.py  test_boolean_circuit.py  test_causal_reasoning.py  test_constraint_reasoning.py  test_either_or.py  (+26 more)
(+59 files in other folders)
