[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ranked_programming"
version = "2.0.0"
description = "Python port of the Racket ranked programming library with complete theoretical foundation"
authors = [{name = "gitrdm", email = "your@email.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "z3-solver>=4.8.0"
]

[project.optional-dependencies]
dev = ["pytest"]
# Optional solver backends for causal constraints (install via ranked_programming[extra])
cp-sat = [
    "ortools>=9.0.0",
]
maxsat = [
    "python-sat>=0.1.7",
]
asp = [
    "clingo>=5.6.2",
]
z3 = [
    "z3-solver>=4.8.0",
]
